<resources>
    <string name="app_name">Testino</string>
    <string name="app_name_per">تستینو</string>

    <string name="welcome_msg">به تستینو خوش آمدید</string>
    <string name="welcome_desc">ارائه دهنده خدمات آزمون آنلاین ویژه دانش آموزان، دبیران، مشاوران و مدیران مدارس</string>
    <string name="welcome_select_userType">لطفا نوع کاربری خود را انتخاب نمایید</string>
    <string name="teacher">استاد</string>
    <string name="student">دانش آموز</string>
    <string name="start">شروع کنید</string>
    <string name="login">ورود</string>
    <string name="login_error">نام کاربری یا رمز عبور صحیح نیست! </string>
    <string name="forget_password">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="home">خانه</string>
    <string name="question_bank">بانک سوالات</string>
    <string name="students">دانش آموزان</string>
    <string name="settings">تنظیمات</string>
    <string name="welcome">خوش آمدید</string>
    <string name="add_new_exam">ساخت آزمون جدید</string>
    <string name="join_testino">اشتراک تستینو ندارید؟ به ما ملحق شوید</string>
    <string name="exam_desc">توضیحات آزمون</string>
    <string name="exam_title">عنوان آزمون</string>
    <string name="exam_properties">مشخصات آزمون</string>
    <string name="exam_name">نام آزمون</string>
    <string name="question_count">تعداد سوالات</string>
    <string name="exam_start_time">زمان شروع آزمون</string>
    <string name="exam_duration">مدت زمان آزمون (به دقیقه)</string>
    <string name="exam_creator">سازنده آزمون</string>
    <string name="you_have_no_questions">شما هیچ سوالی ندارید</string>
    <string name="you_have_no_exam">شما هیچ آزمونی ندارید</string>
    <string name="no_question_bank">شما هیچ بانک سوالی ندارید</string>
    <string name="questionBank_name">عنوان بانک سوال</string>
    <string name="new_qeustion_bank">بانک سوال جدید</string>
    <string name="questions">سوالات</string>


</resources>