<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/questions"
        android:enabled="true"
        android:icon="@drawable/ic_question"
        android:title="@string/question_bank"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/students"
        android:enabled="true"
        android:icon="@drawable/ic_student"
        android:title="@string/students"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>