<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:textDirection="rtl"
    tools:context=".ui.WelcomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/imageView_welcome"
            android:layout_width="200dp"
            android:layout_height="279dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_welcome" />

        <TextView
            android:id="@+id/textView_title_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/welcome_msg"
            android:textColor="@color/dark_text_color"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView_desc_welcome"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_title_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:gravity="center"
            android:text="@string/welcome_desc"
            android:textColor="@color/dark_text_color"
            android:textSize="16sp"

            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/user_type_layout_welcome_fragment"
        android:layout_alignRight="@id/user_type_layout_welcome_fragment"
        android:layout_marginBottom="12dp"
        android:text="@string/welcome_select_userType"
        android:textColor="@color/dark_text_color"
        android:textSize="14sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/user_type_layout_welcome_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_welcome"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_admin_fragment_welcome"
            android:layout_width="130dp"
            android:layout_height="56dp"
            android:checkable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/card_bacnkground_color"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/stork_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView_teacher"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@drawable/teacher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/teacher"
                    android:textColor="@color/dark_text_color"
                    android:textSize="14sp" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_student_fragment_welcome"
            android:layout_width="130dp"
            android:layout_height="56dp"
            android:layout_marginRight="15dp"
            android:checkable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/card_bacnkground_color"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/stork_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView_student"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@drawable/student" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/student"
                    android:textColor="@color/dark_text_color"
                    android:textSize="14sp" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_welcome"
        style="@style/ButtonStyle_primary"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="25dp"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="16dp" />


</RelativeLayout>


