<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:textDirection="rtl">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageView_welcome_login_fragment"
        android:layout_width="182dp"
        android:layout_height="241dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/image_welcome" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_welcome_login_fragment"
        android:layout_alignParentBottom="true"
        android:background="@drawable/cardview_login_fragment_background"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_login_login_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:text="@string/login"
                android:textColor="@color/dark_text_color"
                android:textSize="20sp"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_username_login_fragment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_login_login_fragment"
                android:layout_margin="30dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_username_login_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="number"
                    android:textColor="@color/dark_text_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_password_login_fragment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayout_username_login_fragment"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password_login_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/dark_text_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_forgetPassword_login_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayout_password_login_fragment"
                android:layout_alignRight="@id/inputLayout_password_login_fragment"
                android:layout_marginTop="22dp"
                android:text="@string/forget_password"
                android:textColor="@color/dark_text_color"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/ButtonStyle_primary"
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:layout_below="@id/textView_forgetPassword_login_fragment"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="25dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/powered_by_archroid"
                android:textColor="@color/dark_text_color"
                android:textSize="13sp" />
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
