<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ExamActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/cardview_toolbar_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/exam_properties"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/primary"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="22dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/back"
                    app:tint="@color/white" />
            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_exam_prop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="6dp"
            app:cardBackgroundColor="@color/card_background_blue"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/stork_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl">


                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cardView_image_exam_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:id="@+id/imageView_icon_exam_activity"
                                android:layout_width="match_parent"
                                android:layout_height="139dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/temp_exam_item" />
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/textView_examName_exam_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cardView_image_exam_activity"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginBottom="8dp"
                            android:background="@null"
                            android:text="@string/exam_name"
                            android:textColor="@color/dark_text"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:id="@+id/linearLayout_exam_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textView_examName_exam_activity"
                            android:layout_marginRight="25dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_questionCount_exam_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@null"
                                android:text="@string/question_count"
                                android:textColor="@color/dark_text_grey"
                                android:textSize="14sp" />


                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="15dp"
                                android:src="@drawable/clock" />

                            <TextView
                                android:id="@+id/textView_startTime_exam_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginRight="5dp"
                                android:background="@null"
                                android:text="@string/exam_start_time"
                                android:textColor="@color/dark_text_grey"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/linearLayout_exam_activity"
                            android:layout_marginRight="25dp"
                            android:layout_marginBottom="10dp">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:src="@drawable/timer" />

                            <TextView
                                android:id="@+id/textView_duration_exam_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginRight="5dp"
                                android:background="@null"
                                android:text="@string/exam_duration"
                                android:textColor="@color/dark_text_grey"
                                android:textSize="14sp" />

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="15dp"
                                android:src="@drawable/person" />

                            <TextView
                                android:id="@+id/textView_creator_exam_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginRight="5dp"
                                android:background="@null"
                                android:text="@string/exam_creator"
                                android:textColor="@color/dark_text_grey"
                                android:textSize="14sp" />


                        </LinearLayout>


                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">


                    <TextView
                        android:id="@+id/textView_examDesc_exam_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@null"
                        android:maxLines="3"
                        android:text="@string/exam_desc"
                        android:textColor="@color/dark_text_grey"
                        android:textSize="14sp" />


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/button_1_exam_activity"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/textView_examDesc_exam_activity"
                        android:layout_alignParentLeft="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/accent"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imageView_button_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:src="@drawable/edit"
                            app:tint="@color/white" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/button_2_exam_activity"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/textView_examDesc_exam_activity"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/button_1_exam_activity"
                        android:backgroundTint="@color/card_background"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">


                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imageView_button_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:src="@drawable/answers"
                            app:tint="@color/dark_text_grey" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/button_3_exam_activity"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/textView_examDesc_exam_activity"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/red"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:strokeWidth="0dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imageView_button_3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:src="@drawable/delete"
                            app:tint="@color/white" />
                    </com.google.android.material.card.MaterialCardView>

                </RelativeLayout>
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/cardView_exam_prop"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:text="سوالات آزمون"
                android:textColor="@color/dark_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_questions_exam_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>